	PR bootstrap/68346 	* call.c (build_new_op_1): Don't fold arguments to 	warn_tautological_cmp.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@230382 138bc75d-0d04-0410-961f-82ee72b054a4